--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Photos</title>
 </head>
-
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>Hello, I am Naveena Welcome To My Photografhy World! </h1>
     <span class="Trees">
